a variety of mobile-focused style changes. changelog:
for mobile devices:
- less content padding in landscape
- no content margin in portrait
- heavier font weight in header and footer
- stacked text layout in footer in portrait
- menu layout changes (more padding and space between menu and chickadees)
- fix itunes radio button positioning

for all devices:
- increase padding on bird search input/button across the board

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -10,18 +10,23 @@
       p
         display: inline-block
 
-      button,
-      input
+      input,
+      button
         font-size: $base-font-size - 3
         @include sans-font
         letter-spacing: 1px
+        padding: 8px
 
       input
+        min-width: 180px
         background: lighten($chickadee-light-gray, 5%)
 
       button
         color: $chickadee-cream
         background: $chickadee-gray
+
+        &:hover
+          background: $chickadee-dark-gray
 
 
 #bird
