--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -37,13 +37,13 @@ $mobile-breakpoint: 500px
 
       &#itunes-link
         float: right
-        margin-right: 0px
         margin-top: 0px
+        margin-right: 0px
 
         @media (max-width: $mobile-breakpoint)
-          float: left
-          margin-top: 10px
-          margin-right: $whitespace / 2
+          float: none
+          position: relative
+          top: 12px
 
   #year-program-container
     float: left
