--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -21,12 +21,16 @@
   </div>
 
   <div id="website-copyright">
-    Website by
-    <a href="http://katherineerickson.com/">Katherine Erickson</a>,
-    code on
-    <a href="https://github.com/katur/forthebirds">Github</a>.
+		<span>
+			Website by
+			<a href="http://katherineerickson.com/">Katherine Erickson</a>,
+			code on
+			<a href="https://github.com/katur/forthebirds">Github</a>.
+		</span>
     <br>
-    Chickadee illustrations by
-    <a href="http://michaelgeraci.com">Michael P. Geraci</a>.
+		<span>
+			Chickadee illustrations by
+			<a href="http://michaelgeraci.com">Michael P. Geraci</a>.
+		</span>
   </div>
 </div>
