--- a/website/static/stylesheets/footer.sass
+++ b/website/static/stylesheets/footer.sass
@@ -2,13 +2,31 @@
   color: $content-background
   @include sans-font(light)
 
+  @media (max-width: 600px)
+    @include sans-font(bold)
+
+  @media (max-width: 400px)
+    padding: 0 20px
+
   #content-copyright
     max-width: 60%
     float: left
 
+    @media (max-width: 400px)
+      max-width: 100%
+      width: 100%
+
   #website-copyright
     max-width: 35%
     float: right
+
+    @media (max-width: 400px)
+      max-width: 100%
+      width: 100%
+      margin-top: 20px
+
+      span
+        display: block
 
   a
     color: $light-link-color
