--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -48,6 +48,7 @@ $card-border-radius: 2px
 @import ../../../creations/static/stylesheets/miscellany
 @import ../../../creations/static/stylesheets/radio
 @import ../../../creations/static/stylesheets/research
+@import ../../../creations/static/stylesheets/soundrecording
 @import ../../../creations/static/stylesheets/speaking
 @import ../../../creations/static/stylesheets/webpage
 @import ../../../creations/static/stylesheets/writing
