add placeholder background and data-src attribute, remove image

--- a/birds/templates/photo_checklist.html
+++ b/birds/templates/photo_checklist.html
@@ -18,8 +18,9 @@
   <h2>{{ family.grouper }}</h2>
   <div class="photo-checklist-family">
     {% for bird in family.list %}
-    <a class="photo-and-caption" href="{{ bird.get_absolute_url }}">
-      <img src="{{ bird.main_photo_url }}" />
+		<a class="photo-and-caption photo-and-caption--unloaded"
+					href="{{ bird.get_absolute_url }}"
+					data-src="{{ bird.main_photo_url }}">
 
       <div class="photo-caption">
         {{ bird.common_name }}
