--- a/birds/static/stylesheets/photochecklist.sass
+++ b/birds/static/stylesheets/photochecklist.sass
@@ -25,8 +25,12 @@
 
         .photo-and-caption
           display: block
+          background: rgba(#fff, 0.2)
           box-sizing: border-box
           @include four-three-two-one-child
+
+          &--unloaded
+            @include four-three-two-one-child(true)
 
           &:after
             content: ''
