--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -103,7 +103,7 @@ $tag-spacing: 3px
   left: -5%
 
 
-@mixin four-three-two-one-child
+@mixin four-three-two-one-child($aspect-ratio: false)
   display: block
   position: relative
   box-sizing: border-box
@@ -111,11 +111,17 @@ $tag-spacing: 3px
   width: 20%
   margin: 0 2.5% 50px 2.5%
 
+  @if $aspect-ratio
+    padding-top: 16%
+
   &:nth-child(4n+1)
     clear: left
 
   @media (max-width: 1400px)
     width: 28.3%
+
+    @if $aspect-ratio
+      padding-top: 19%
 
     &:nth-child(4n+1)
       clear: none
@@ -124,6 +130,9 @@ $tag-spacing: 3px
 
   @media (max-width: 1050px)
     width: 45%
+
+    @if $aspect-ratio
+      padding-top: 30%
 
     &:nth-child(4n+1)
       clear: none
@@ -134,3 +143,6 @@ $tag-spacing: 3px
 
   @media (max-width: 700px)
     width: 95%
+
+    @if $aspect-ratio
+      padding-top: 57%
