--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -666,6 +666,7 @@ html, body {
     left: -5%; }
     #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption {
       display: block;
+      background: rgba(255, 255, 255, 0.2);
       box-sizing: border-box;
       display: block;
       position: relative;
@@ -694,6 +695,38 @@ html, body {
       @media (max-width: 700px) {
         #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption {
           width: 95%; } }
+      #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded {
+        display: block;
+        position: relative;
+        box-sizing: border-box;
+        float: left;
+        width: 20%;
+        margin: 0 2.5% 50px 2.5%;
+        padding-top: 16%; }
+        #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded:nth-child(4n+1) {
+          clear: left; }
+        @media (max-width: 1400px) {
+          #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded {
+            width: 28.3%;
+            padding-top: 19%; }
+            #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded:nth-child(4n+1) {
+              clear: none; }
+            #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded:nth-child(3n+1) {
+              clear: left; } }
+        @media (max-width: 1050px) {
+          #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded {
+            width: 45%;
+            padding-top: 30%; }
+            #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded:nth-child(4n+1) {
+              clear: none; }
+            #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded:nth-child(3n+1) {
+              clear: none; }
+            #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded:nth-child(2n+1) {
+              clear: left; } }
+        @media (max-width: 700px) {
+          #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption--unloaded {
+            width: 95%;
+            padding-top: 57%; } }
       #photo-checklist #content #photo-checklist-full .photo-checklist-family .photo-and-caption:after {
         content: "";
         display: block;
