--- a/birds/static/stylesheets/photochecklist.sass
+++ b/birds/static/stylesheets/photochecklist.sass
@@ -61,7 +61,9 @@
             width: 100%
             padding: 2%
             background: rgba(0,0,0,.5)
-            font-size: 12px
+            @include sans-font
+            font-size: 13px
+            letter-spacing: 0.1em
             color: $chickadee-white
 
             .left
