--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -42,13 +42,19 @@
       font-size: $base-font-size - 2
 
   #overview
-    #main-photo
-      display: block
+    #main-media-wrapper
       float: left
       max-width: 45%
-      height: auto
       margin-right: 5%
       margin-bottom: $whitespace / 2
+
+      img, audio
+        float: left
+        width: 100%
+        display: block
+
+      img
+        height: auto
 
       @media (max-width: 600px)
         max-width: 100%
