--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -508,15 +508,19 @@ html, body {
   @media (max-width: 600px) {
     #bird #taxonomy {
       font-size: 15px; } }
-#bird #overview #main-photo {
-  display: block;
+#bird #overview #main-media-wrapper {
   float: left;
   max-width: 45%;
-  height: auto;
   margin-right: 5%;
   margin-bottom: 18px; }
+  #bird #overview #main-media-wrapper img, #bird #overview #main-media-wrapper audio {
+    float: left;
+    width: 100%;
+    display: block; }
+  #bird #overview #main-media-wrapper img {
+    height: auto; }
   @media (max-width: 600px) {
-    #bird #overview #main-photo {
+    #bird #overview #main-media-wrapper {
       max-width: 100%;
       margin-right: 0%;
       margin-bottom: 36px; } }
