Minor copy change

--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -52,7 +52,7 @@
 
 <div id="birds-taxonomical" class="page-section">
   <h3 class="page-subtitle">
-    Search taxonomically
+    Find taxonomically
   </h3>
 
   <ul class="orders">
