add some functions from other libs, load images lazily

--- a/birds/static/stylesheets/photochecklist.sass
+++ b/birds/static/stylesheets/photochecklist.sass
@@ -32,6 +32,11 @@
           &--unloaded
             @include four-three-two-one-child(true)
 
+          &--loading
+            @include four-three-two-one-child(true)
+
+          &--loaded
+
           &:after
             content: ''
             display: block
