Increase size between h3 immediately following h2

--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -75,6 +75,13 @@ $page-element-breakpoint: 500px
     margin-bottom: 0px
 
 
+#page-title + .page-section > .page-subtitle
+  margin-top: $whitespace / 3
+
+  @media (max-width: $page-element-breakpoint)
+    margin-top: $whitespace / 3
+
+
 .page-subtitle
   margin-bottom: $whitespace / 2
 
