slight layout changes, including an IE fix, remove console logs

--- a/birds/static/stylesheets/photochecklist.sass
+++ b/birds/static/stylesheets/photochecklist.sass
@@ -6,6 +6,9 @@
       color: $peach-pink
 
     #photo-checklist-full
+      position: relative
+      overflow: hidden
+
       h2
         width: 100%
         float: left
@@ -56,6 +59,7 @@
           img
             float: left
             width: 100%
+            height: auto
 
           .photo-caption
             box-sizing: border-box
