--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -30,13 +30,15 @@
 
 
 #bird
-  #taxonomy
+  #taxonomy-table,
+  #taxonomy-text
     width: 100%
     background: $moss
     @include sans-font(light)
     color: $chickadee-cream
     text-align: center
 
+  #taxonomy-table
     td
       padding: 2px 4px
 
@@ -44,7 +46,24 @@
       font-size: $base-font-size - 1
 
     @media (max-width: 600px)
-      font-size: $base-font-size - 2
+      display: none
+
+  #taxonomy-text
+    display: none
+    @include clearfix
+
+    @media (max-width: 600px)
+      display: block
+
+    span
+      @include box-sizing(border-box)
+      float: left
+      width: 33%
+      padding: 5px 20px
+
+      @media (max-width: 400px)
+        width: 100%
+        padding: 5px 10px
 
   #overview
     #main-media-wrapper
