--- a/birds/templates/bird.html
+++ b/birds/templates/bird.html
@@ -15,7 +15,7 @@
 
 <div class="page-section">
   <div class="page-subsection">
-    <table id="taxonomy">
+    <table id="taxonomy-table">
       <tr>
       <td><i>{{ bird.scientific_name }}</i></td>
 
@@ -33,6 +33,26 @@
 
       {% endwith %}
     </table>
+
+		<div id="taxonomy-text">
+			<span>
+				{{ bird.scientific_name }}
+			</span>
+
+      {% with order=bird.get_order family=bird.get_family %}
+
+			<span>
+        Order: {{ order.name }}
+        {% if order.common_name %}({{ order.common_name }}){% endif %}
+			</span>
+
+			<span>
+        Family: {{ family.name }}
+        {% if family.common_name %}({{ family.common_name }}){% endif %}
+			</span>
+
+			{% endwith %}
+		</div>
   </div>
 
   <div id="overview" class="page-subsection">
