--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -25,9 +25,8 @@
 {% block content %}
 
 <div id="program-columns" class="page-subsection">
-  <div id="artwork" class="column"
-      data-program-pk="{{ program.pk }}">
-    <img src="{% static 'images/camera-icon.png' %}"/>
+  <div id="artwork" class="column" data-pk="{{ program.pk }}">
+    <img src="{% static 'images/camera-icon.png' %}" />
   </div>
 
   <div class="column">
