--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -1165,13 +1165,28 @@ html, body {
   #research #content .help-message p {
     display: inline; }
 
-#sound-recording #recording-information span {
+#sound-recording #recording-columns .column:first-child {
+  float: left;
+  width: 35%; }
+#sound-recording #recording-columns .column:last-child {
+  float: right;
+  width: 60%;
+  margin-top: 0px; }
+@media (max-width: 600px) {
+  #sound-recording #recording-columns .column:first-child, #sound-recording #recording-columns .column:last-child {
+    float: left;
+    width: 100%; }
+  #sound-recording #recording-columns .column:last-child {
+    margin-top: 36px; } }
+#sound-recording #recording-columns #artwork img {
+  max-width: 100%; }
+#sound-recording #recording-columns span {
   float: left;
   clear: both;
   margin-bottom: 18px; }
-  #sound-recording #recording-information span:last-child {
+  #sound-recording #recording-columns span:last-child {
     margin-bottom: 0px; }
-#sound-recording #recording-information #audio .download-link img {
+#sound-recording #recording-columns .download-link img {
   width: 30px;
   height: 30px; }
 
