--- a/website/templates/head_common.html
+++ b/website/templates/head_common.html
@@ -1,23 +1,28 @@
 {% load staticfiles %}
 
+
 <meta name="viewport" content="width=device-width, user-scalable=no" />
 
-<link href="{% static 'images/favicon.ico' %}" rel="icon"
-  type="image/x-icon" />
+<link href="{% static 'images/favicon.ico' %}"
+  rel="icon" type="image/x-icon" />
 
 <link href="{% static 'stylesheets/styles.css' %}"
   rel="stylesheet" type="text/css" />
 
-<script src="{% static 'js/jquery.js' %}"
+<script
+  src="{% static 'js/jquery.js' %}"
   type="text/javascript"></script>
 
-<script src="{% static 'js/birds.js' %}"
+<script
+  src="{% static 'js/birds.js' %}"
   type="text/javascript"></script>
 
-<script src="{% static 'js/creations.js' %}"
+<script
+  src="{% static 'js/creations.js' %}"
   type="text/javascript"></script>
 
-<script src="{% static 'js/waystohelp.js' %}"
+<script
+  src="{% static 'js/waystohelp.js' %}"
   type="text/javascript"></script>
 
 <script>
@@ -26,6 +31,6 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-1619342-5', 'auto');
+  ga('create', '{{ GOOGLE_ANALYTICS_ID }}', 'auto');
   ga('send', 'pageview');
 </script>
