--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -188,11 +188,13 @@ $mobile-breakpoint: 500px
 
     #above-mp3
       float: left
+      width: 100%
       @include cleared-spans
       margin-bottom: $whitespace
 
     #mp3-and-below
       float: left
+      width: 100%
       @include cleared-spans($whitespace / 3)
       @include radio-detail-font
 
