Add year to radio calendar

--- a/creations/templates/radio_calendar.html
+++ b/creations/templates/radio_calendar.html
@@ -51,7 +51,7 @@ for {{ month }}, {{ year }}
           {{ program.get_printable_duration}},
 
           {% if is_rerun %}
-          rerun
+          rerun ({{ program.air_date|date:'Y' }})
           {% else %}
           new!
           {% endif %}
