Allow webpages to be private

--- a/creations/static/stylesheets/webpage.sass
+++ b/creations/static/stylesheets/webpage.sass
@@ -1,4 +1,10 @@
 #webpage
+  #construction-warning
+    width: 100%
+    text-align: center
+    color: red
+    margin-bottom: $whitespace * 2
+
   #page-title, #webpage-info, #webpage-text, #webpage-tags
     float: none
     width: 100%
