--- a/creations/templates/radio_calendar.html
+++ b/creations/templates/radio_calendar.html
@@ -17,10 +17,10 @@
 
 
 {% block page_title %}
-<a href="{{ previous_month_url }}">&larr;</a>
+<a id="previous-month" href="{{ previous_month_url }}">&larr;</a>
 <i>For the Birds</i> Radio Program Calendar
 for {{ month }}, {{ year }}
-<a href="{{ next_month_url }}">&rarr;</a>
+<a id="next-month" href="{{ next_month_url }}">&rarr;</a>
 {% endblock %}
 
 
