Changes to use eBird rather than AOU fields

--- a/birds/static/stylesheets/photochecklist.sass
+++ b/birds/static/stylesheets/photochecklist.sass
@@ -3,7 +3,7 @@
     background: black
 
     #page-title
-      color: $peach-pink
+      color: $peach-orange
 
     #photo-checklist-full
       position: relative
