--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -56,57 +56,39 @@
   </h3>
 
   <ul class="orders">
-  {% regroup taxonomical_birds by order_name as orders %}
-  {% for order in orders %}
-    <li><a href="#">
-      {{ order.grouper }}
-      {% if order.list.0.order_common %}
-        ({{ order.list.0.order_common }})
-      {% endif %}
-      <div class="plus-sign"></div>
-    </a></li>
+    {% regroup taxonomical_birds by order as orders %}
+    {% for order in orders %}
+    <li>
+      <a href="#">
+        {{ order.grouper }}
+        <div class="plus-sign"></div>
+      </a>
+    </li>
 
     <ul class="families collapsed">
-    {% regroup order.list by family_name as families %}
-    {% for family in families %}
-      <li><a href="#">
-        {{ family.grouper }}
-        {% if family.list.0.family_common %}
+      {% regroup order.list by family as families %}
+      {% for family in families %}
+      <li>
+        <a href="#">
+          {{ family.grouper }}
           ({{ family.list.0.family_common }})
-        {% endif %}
         <div class="plus-sign"></div>
-      </a></li>
+        </a>
+      </li>
 
-      <ul class="subfamilies collapsed">
-      {% regroup family.list by subfamily_name as subfamilies %}
-      {% for subfamily in subfamilies %}
-        {% if subfamily.grouper %}
-          <li><a href="#">
-            {{ subfamily.grouper }}
-            {% if subfamily.list.0.subfamily_common %}
-              ({{ subfamily.list.0.subfamily_common }})
-            {% endif %}
-            <div class="plus-sign"></div>
-          </a></li>
-        {% else %}
-          <li class="no-subfamily">No subfamily</li>
-        {% endif%}
-
-        <ul class="species collapsed">
-        {% for species in subfamily.list %}
-          <li>
-            <a href="{{ species.get_absolute_url }}">
-              {{ species.common_name }}
-              (<i>{{ species.scientific_name }}</i>)</a>
-          </li>
+      <ul class="species collapsed">
+        {% for species in family.list %}
+        <li>
+          <a href="{{ species.get_absolute_url }}">
+            {{ species.common_name }}
+            (<i>{{ species.scientific_name }}</i>)</a>
+        </li>
         {% endfor %}
-        </ul>
+      </ul>
 
       {% endfor %}
-      </ul>
-    {% endfor %}
     </ul>
-  {% endfor %}
+    {% endfor %}
   </ul>
 </div>
 
