--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -732,7 +732,7 @@ html, body {
 #photo-checklist #content {
   background: black; }
   #photo-checklist #content #page-title {
-    color: #de8d88; }
+    color: #deb888; }
   #photo-checklist #content #photo-checklist-full {
     position: relative;
     overflow: hidden; }
