--- a/birds/templates/bird.html
+++ b/birds/templates/bird.html
@@ -13,6 +13,12 @@
 
 {% block content %}
 
+{% if request.user.is_authenticated %}
+<a id="edit-page-link"
+    href="{% url 'admin:birds_species_change' bird.id %}">
+  Edit this bird</a>
+{% endif %}
+
 <div class="page-section">
   <div class="page-subsection">
     <table id="taxonomy-table">
