--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -221,10 +221,20 @@ html, body {
   background: #f5f4ee;
   padding: 54px;
   border-radius: 2px; }
+  #content #edit-page-link {
+    display: block;
+    position: absolute;
+    top: 54px;
+    right: 54px;
+    font-family: "Dosis", sans-serif;
+    font-size: 15px; }
   @media (max-width: 600px) {
     #content {
       padding: 28.8px 3%;
-      min-height: 0; } }
+      min-height: 0; }
+      #content #edit-page-link {
+        top: 28.8px;
+        right: 3%; } }
   @media (max-width: 400px) {
     #content {
       border-radius: 0; } }
