--- a/waystohelp/templates/way_to_help.html
+++ b/waystohelp/templates/way_to_help.html
@@ -15,6 +15,9 @@
 
 {% block content %}
 
+{% url 'admin:waystohelp_waytohelp_change' way.id as edit_page_url %}
+{% include 'edit_page_link.html' %}
+
 {% if user.is_authenticated %}
 <div id="text" class="markdown">
   {{ way.text|enhanced_markdown }}
