--- a/creations/templates/webpage.html
+++ b/creations/templates/webpage.html
@@ -13,6 +13,9 @@
 
 {% block content %}
 
+{% url 'admin:creations_webpage_change' webpage.id as edit_page_url %}
+{% include 'edit_page_link.html' %}
+
 {% if not webpage.is_public %}
 <h4 id="construction-warning">Page under construction</h4>
 {% endif %}
