--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -14,8 +14,10 @@
 
 {% block content %}
 
-<div id="overview" class="page-section">
+{% url 'admin:auth_user_change' laura.id as edit_page_url %}
+{% include 'edit_page_link.html' %}
 
+<div id="overview" class="page-section">
   <img id="primary-photo"
     src="{{ MEDIA_URL }}{{ laura.userprofile.main_photo.image }}" />
 
