Add background to distinguish non-day calendar squares

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -237,3 +237,6 @@ $mobile-breakpoint: 500px
 
       .program-type
         @include radio-detail-font
+
+      &.no-day
+        background: $chickadee-light-gray
