Add sound recording durations

--- a/creations/static/stylesheets/soundrecording.sass
+++ b/creations/static/stylesheets/soundrecording.sass
@@ -12,3 +12,19 @@
       img
         width: 30px
         height: 30px
+
+
+#sound-recordings
+  ul
+    @include bulleted-list
+
+    li
+      margin-bottom: $whitespace / 4
+
+      a,
+      span
+        display: block
+        clear: both
+
+      .description
+        margin-left: 1em
